--- a/agents.html
+++ b/agents.html
@@ -131,8 +131,17 @@
         <span class="glyphicon glyphicon-earphone"></span> +2349153860576</div>
       </div>
       <!-- agents -->
-      
-
+       
+       <div class="row">
+        <div class="col-lg-2 col-sm-2 "><a href="#"><img src="images/agents/james.jpeg" class="img-responsive" alt="agent name"></a></div>
+        <div class="col-lg-7 col-sm-7 "><h4>Bankole Otunola James</h4>
+        <p>Bankole, populary known as Banky, has extensive in-depth knowledge of the Real Estate Transaction from start to finish. Only 10% of the REALTOR®s nationwide have earned this designation which indicates the legal 
+          and financial commitment needed to complete the course of study. He has also completed is designation for Senior Real Estate Service (SRES) making him an expert in serving
+           senior and Baby Boomer clients in any community, most especially Lagos. In addition to the above Bankole is currently a member of National Association of Property Managers.
+           </p></div>
+        <div class="col-lg-3 col-sm-3 "><span class="glyphicon glyphicon-envelope"></span> <a href="mailto:larry@larryhomesltd.com">larry@larryhomesltd.com</a><br>
+        <span class="glyphicon glyphicon-earphone"></span> +2349153860576</div>
+      </div>
        <!-- agents -->
       <div class="row">
         <div class="col-lg-2 col-sm-2 "><a href="#"><img src="images/agents/3.jpeg" class="img-responsive" alt="agent name"></a></div>
@@ -156,7 +165,16 @@
         <span class="glyphicon glyphicon-earphone"></span> +2349153860576</div>
       </div>
       <!-- agents -->
-
+   
+	   <div class="row">
+        <div class="col-lg-2 col-sm-2 "><a href="#"><img src="images/agents/ada.jpeg" class="img-responsive" alt="agent name"></a></div>
+        <div class="col-lg-7 col-sm-7 "><h4>Chuku Adaeze Ekeoma</h4>
+        <p>Adaeze, popularly called Nwa Baby, has always been involved in all aspects of the Real Estate Market, most especially marketing.
+           Adaeze is also raising the sixth generation marketers.If you see Adaeze on the street come over and say hello; if you're looking 
+           for a REALTOR® with expertise in Lagos, look no further.</p></div>
+        <div class="col-lg-3 col-sm-3 "><span class="glyphicon glyphicon-envelope"></span> <a href="mailto:larry@larryhomesltd.com">larry@larryhomesltd.com</a><br>
+        <span class="glyphicon glyphicon-earphone"></span> +2349153860576</div>
+      </div>
        <!-- agents -->
       <div class="row">
         <div class="col-lg-2 col-sm-2 "><a href="#"><img src="images/agents/4.jpeg" class="img-responsive" alt="agent name"></a></div>
