--- a/blogdetail.html
+++ b/blogdetail.html
@@ -7,7 +7,7 @@
 
  	<link rel="stylesheet" href="assets/bootstrap/css/bootstrap.css" />
   <link rel="stylesheet" href="assets/style.css"/>
-  <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+  <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
 	<script src="assets/bootstrap/js/bootstrap.js"></script>
   <script src="assets/script.js"></script>
 
@@ -167,7 +167,7 @@
 <span class="glyphicon glyphicon-earphone"></span> (+234) 7037784244, (+234) 9153860576</p>
             </div>
         </div>
-<p class="copyright">Copyright 2021. All rights reserved.	</p>
+<p class="copyright">Copyright 2021. All rights reserved.</p>
 
 
 </div>
