--- a/agents.html
+++ b/agents.html
@@ -166,7 +166,7 @@
       </div>
       <!-- agents -->
    
-	   <div class="row">
+	   <!-- <div class="row">
         <div class="col-lg-2 col-sm-2 "><a href="#"><img src="images/agents/ada.jpeg" class="img-responsive" alt="agent name"></a></div>
         <div class="col-lg-7 col-sm-7 "><h4>Chuku Adaeze Ekeoma</h4>
         <p>Adaeze, popularly called Nwa Baby, has always been involved in all aspects of the Real Estate Market, most especially marketing.
@@ -174,7 +174,7 @@
            for a REALTOR® with expertise in Lagos, look no further.</p></div>
         <div class="col-lg-3 col-sm-3 "><span class="glyphicon glyphicon-envelope"></span> <a href="mailto:larry@larryhomesltd.com">larry@larryhomesltd.com</a><br>
         <span class="glyphicon glyphicon-earphone"></span> +2349153860576</div>
-      </div>
+      </div> -->
        <!-- agents -->
       <div class="row">
         <div class="col-lg-2 col-sm-2 "><a href="#"><img src="images/agents/4.jpeg" class="img-responsive" alt="agent name"></a></div>
