--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
            
           <blockquote>              
               <p class="location"><span class="glyphicon glyphicon-map-marker"></span> 2, Ashimi Close, Atunrase Estate, Gbagada, Lagos.</p>
-              <!-- <p>Until he extends the circle of his compassion to the average, man will not himself find peace. 
-                Invest in affordable housing now -before it is too late.</p> -->
+              <p>Until he extends the circle of his compassion to the average, man will not himself find peace. 
+                Invest in affordable housing now -before it is too late.</p>
               <!-- <cite>N1,300,000</cite> -->
               </blockquote>
             </div>
