--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
              <h2><a href="#">Larry Residantial Homes</a></h2>       
            
           <blockquote>              
-              <p class="location"><span class="glyphicon glyphicon-map-marker"></span> 2, Ashimi Close, Atunrase Estate, Gbagada, Lagos.</p>
+              <p class="location"><span class="glyphicon glyphicon-map-marker"></span> Block F1, shop 370, HFP Eastline Complex Abraham Adesanya, Lagos..</p>
               <p>Until he extends the circle of his compassion to the average, man will not himself find peace. 
                 Invest in affordable housing now -before it is too late.</p>
               <!-- <cite>N1,300,000</cite> -->
@@ -90,7 +90,7 @@
               <div class="bg-img bg-img-2"></div>
               <h2><a href="#">Proposed Residential Homes</a></h2>
               <blockquote>              
-              <p class="location"><span class="glyphicon glyphicon-map-marker"></span> 2, Ashimi Close, Atunrase Estate, Gbagada, Lagos.</p>
+              <p class="location"><span class="glyphicon glyphicon-map-marker"></span> Block F1, shop 370, HFP Eastline Complex Abraham Adesanya, Lagos..</p>
               <p> Invest in affordable housing now -before it is too late.</p>
               <cite>N27,000,000 &ndash;<span>Upwards</span></cite>
               </blockquote>
@@ -102,7 +102,7 @@
               <div class="bg-img bg-img-3"></div>
               <h2><a href="#">Proposed Residential Cottages</a></h2>
               <blockquote>              
-              <p class="location"><span class="glyphicon glyphicon-map-marker"></span> 2, Ashimi Close, Atunrase Estate, Gbagada, Lagos.</p>
+              <p class="location"><span class="glyphicon glyphicon-map-marker"></span> Block F1, shop 370, HFP Eastline Complex Abraham Adesanya, Lagos..</p>
               <p>Until he extends the circle of his compassion to the average, man will not himself find peace. 
               <p><cite>N47,000,000</cite></p>
               </blockquote>
@@ -418,12 +418,12 @@
              <div class="col-lg-3 col-sm-3">
                     <h4>Contact us</h4>
                     <p><b>Larry Homes Inc.</b><br>
-<span class="glyphicon glyphicon-map-marker"></span>2, Ashimi Close, Atunrase Estate, Gbagada, Lagos.<br>
+<span class="glyphicon glyphicon-map-marker"></span>Block F1, shop 370, HFP Eastline Complex Abraham Adesanya, Lagos.<br>
 <span class="glyphicon glyphicon-envelope"></span> larry@larryhomesltd.com<br>
 <span class="glyphicon glyphicon-earphone"></span> (+234) 7037784244, (+234) 9153860576</p>
             </div>
         </div>
-<p class="copyright">Copyright 2021. All rights reserved.	</p>
+<p class="copyright">Copyright 2022. All rights reserved.	</p>
 
 
 </div>
