--- a/agents.html
+++ b/agents.html
@@ -133,7 +133,7 @@
       <!-- agents -->
        
        <div class="row">
-        <div class="col-lg-2 col-sm-2 "><a href="#"><img src="images/agents/james.jpeg" class="img-responsive" alt="agent name"></a></div>
+        <div class="col-lg-2 col-sm-2 "><a href="#"><img src="images/agents/white.jpeg" class="img-responsive" alt="agent name"></a></div>
         <div class="col-lg-7 col-sm-7 "><h4>Bankole Otunola James</h4>
         <p>Bankole, populary known as Banky, has extensive in-depth knowledge of the Real Estate Transaction from start to finish. Only 10% of the REALTOR®s nationwide have earned this designation which indicates the legal 
           and financial commitment needed to complete the course of study. He has also completed is designation for Senior Real Estate Service (SRES) making him an expert in serving
@@ -177,8 +177,8 @@
       </div> -->
        <!-- agents -->
       <div class="row">
-        <div class="col-lg-2 col-sm-2 "><a href="#"><img src="images/agents/4.jpeg" class="img-responsive" alt="agent name"></a></div>
-        <div class="col-lg-7 col-sm-7 "><h4>Amarachi Nwaeze</h4>
+        <div class="col-lg-2 col-sm-2 "><a href="#"><img src="images/agents/black.jpeg" class="img-responsive" alt="agent name"></a></div>
+        <div class="col-lg-7 col-sm-7 "><h4>Akingbemila Adesola Rita</h4>
         <p>After graduating from University, Amara had worked in the consulting world.  
            She believes that if your name is on the door, you have a greater responsibility. She has seen steady growth with her business as well as with the community.
            Amara has represented thousands of people helping them find new homes in the Ibeju-Lekki Ajah area.</p></div>
