--- a/agents.html
+++ b/agents.html
@@ -134,10 +134,10 @@
        
        <div class="row">
         <div class="col-lg-2 col-sm-2 "><a href="#"><img src="images/agents/white.jpeg" class="img-responsive" alt="agent name"></a></div>
-        <div class="col-lg-7 col-sm-7 "><h4>Bankole Otunola James</h4>
-        <p>Bankole, populary known as Banky, has extensive in-depth knowledge of the Real Estate Transaction from start to finish. Only 10% of the REALTOR®s nationwide have earned this designation which indicates the legal 
-          and financial commitment needed to complete the course of study. He has also completed is designation for Senior Real Estate Service (SRES) making him an expert in serving
-           senior and Baby Boomer clients in any community, most especially Lagos. In addition to the above Bankole is currently a member of National Association of Property Managers.
+        <div class="col-lg-7 col-sm-7 "><h4>Ajutor Ewere Maureens</h4>
+        <p>Maureen, populary known as Banky, has extensive in-depth knowledge of the Real Estate Transaction from start to finish. Only 10% of the REALTOR®s nationwide have earned this designation which indicates the legal 
+          and financial commitment needed to complete the course of study. She has also completed is designation for Senior Real Estate Service (SRES) making him an expert in serving
+           senior and Baby Boomer clients in any community, most especially Lagos. In addition to the above Maureen is currently a member of National Association of Property Managers.
            </p></div>
         <div class="col-lg-3 col-sm-3 "><span class="glyphicon glyphicon-envelope"></span> <a href="mailto:larry@larryhomesltd.com">larry@larryhomesltd.com</a><br>
         <span class="glyphicon glyphicon-earphone"></span> +2349153860576</div>
@@ -155,7 +155,7 @@
       
 
       <!-- agents -->
-      <div class="row">
+<!--       <div class="row">
         <div class="col-lg-2 col-sm-2 "><a href="#"><img src="images/agents/5.jpeg" class="img-responsive" alt="agent name"></a></div>
         <div class="col-lg-7 col-sm-7 "><h4>Kayode Ibironke</h4>
         <p>Ronke, popularly called Ronkii doll, has always been involved in all aspects of the Real Estate Market, most especially marketing.
@@ -163,7 +163,7 @@
            for a REALTOR® with expertise in Lagos, look no further.</p></div>
         <div class="col-lg-3 col-sm-3 "><span class="glyphicon glyphicon-envelope"></span> <a href="mailto:larry@larryhomesltd.com">larry@larryhomesltd.com</a><br>
         <span class="glyphicon glyphicon-earphone"></span> +2349153860576</div>
-      </div>
+      </div> -->
       <!-- agents -->
    
 	   <!-- <div class="row">
@@ -234,7 +234,7 @@
              <div class="col-lg-3 col-sm-3">
                     <h4>Contact us</h4>
                     <p><b>Larry Homes Inc.</b><br>
-<span class="glyphicon glyphicon-map-marker"></span>2, Ashimi Close, Atunrase Estate, Gbagada, Lagos.<br>
+<span class="glyphicon glyphicon-map-marker"></span>HFP  Eastline Complex Abraham  Adesanya Lagos Block F1 shop 370.<br>
 <span class="glyphicon glyphicon-envelope"></span> larry@larryhomesltd.com<br>
 <span class="glyphicon glyphicon-earphone"></span> (+234) 7037784244, (+234) 9153860576</p>
             </div>
